# testkit_java_service

./: Cargo.toml  build.rs
src/: classpaths  lib.rs
src/proto/: mod.rs  transactions.proto  transactions.rs
